integrated navbar and footer of customer_web bootstrap, scss, basic navbar and footer

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>client</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <title>Site name</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css"/>
   </head>
   <body>
+    <!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <div id="app">
-      <p>
-        <!-- use router-link component for navigation. -->
-        <!-- specify the link by passing the `to` prop. -->
-        <!-- <router-link> will be rendered as an `<a>` tag by default -->
-        <router-link to="/home">Go to Home</router-link>
-        <router-link to="/foo">Go to Foo</router-link>
-      </p>
-      <!-- route outlet -->
-      <!-- component matched by the route will render here -->
       <router-view></router-view>
     </div>
   </body>
