--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <title>Site name</title>
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+
+    <style>
+      body {
+        min-height: 75rem;
+        padding-top: 3.5rem;
+      }
+    </style>
   </head>
   <body>
     <!--[if lt IE 8]>
@@ -16,5 +24,25 @@
     <div id="app">
       <router-view></router-view>
     </div>
+
+    <!-- JQuery & Tether CDN with local fallback, Bootstrap require them -->
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      if (typeof jQuery == 'undefined') {
+          document.write(unescape("%3Cscript src='/static/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"
+      integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8"
+      crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      if (typeof Tether == 'undefined') {
+          document.write(unescape("%3Cscript src='/static/tether.min.js' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
